Fix: New card aspect ratio leading to weird spacing

--- a/src/app/components/grid-element/grid-element.component.scss
+++ b/src/app/components/grid-element/grid-element.component.scss
@@ -28,6 +28,8 @@
   app-collection-media-container,
   app-entity-media-container {
     aspect-ratio: 449 / 252;
+    width: 100%;
+    height: 100%;
   }
 }
 
